# autoexperiments

./: .gitignore  =4.51.0  LICENSE  README.md  pyproject.toml
autoexperiments/: __init__.py  agent.py  cli.py  git_ops.py  learning.py  program_gen.py  runner.py  task_config.py  tracker.py
autoexperiments/tasks/llm-finetune/: evaluate.py  requirements.txt  task.toml
tasks/demo-sorting/: sort_bench.py  task.toml
tasks/gpt-pretraining/: task.toml
tasks/llm-finetune/: finetune.py  prepare_data.py  program.md  run_experiments.py  task.toml
tests/: test_agent_tools.py  test_learning.py  test_runner.py  test_tracker.py
