[project]
name = "autoexperiments"
version = "0.1.0"
description = "Generic framework for autonomous AI-driven experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["google-genai"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.optional-dependencies]
llm-finetune = [
    "torch",
    "transformers>=4.51.0",
    "datasets",
    "peft",
    "accelerate",
    "python-dotenv",
]

[project.scripts]
autoexp = "autoexperiments.cli:main"

[tool.setuptools.package-data]
"autoexperiments.tasks" = ["**/*.py", "**/*.toml", "**/*.md", "**/*.txt"]
